Mick last push 16/6/60

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,4 +15,16 @@
         .bar-buttons-md {
             order: 1;
         }
+        [iconinList1] {
+            color: green;
+            padding-right: 5px;
+            padding-left: 5px;
+            align-items: flex-end;
+        }
+        [iconinList2] {
+            color: red;
+            padding-right: 5px;
+            padding-left: 5px;
+            align-items: flex-end;
+        }
     }
