--- a/src/pages/leave-detail/leave-detail.scss
+++ b/src/pages/leave-detail/leave-detail.scss
@@ -19,7 +19,8 @@ page-leave-detail {
         font-weight: bold;
     }
     .fontnor {
-        font: 14px;
+        font-size: 14px !important;
+        font-weight: normal !important;
     }
     .ion-md-calendar {
         color: darkorange;
