MIck Last Update Today 23/6/60

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -27,4 +27,7 @@
             padding-left: 5px;
             align-items: flex-end;
         }
+        [toastTextCenter] {
+            text-align: center;
+        }
     }
