--- a/src/pages/request/request.scss
+++ b/src/pages/request/request.scss
@@ -33,4 +33,8 @@ page-request {
         padding-left: 5px;
         align-items: flex-end;
     }
+    [iconCalendar] {
+        color: darkorange;
+        font-size: 45px;
+    }
 }
